finish home page layout

--- a/index.html
+++ b/index.html
@@ -63,6 +63,49 @@
         </div>
     </section>
 
+    <!-- ======================================= contact us =======================================-->
+
+    <section id="contact">
+        <h2 class="p-5">Keep in Touch</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="info">
+                        <div class="contactInfo">
+                            <p> Phone Number : 01141736576</p>
+                            <p>Adress : Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                            <p>Email : almniproject@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="contactUs">
+                        <form action="">
+                            <input type="text" class="form-control" name="username" placeholder="Enter Your Name" id="username">
+                            <p class="usernameAlert alert">Invalid User Name</p>
+                            <input type="Email" class="form-control" name="email" placeholder="Enter Your Email" id="email">
+                            <div class="emailAlert alert">Invalid Email</div>
+                            <input type="text" class="form-control" name="phone" placeholder="Enter Your Phone Number" id="number">
+                            <div class="phoneAlert alert">Invalid Mobile Number</div>
+                            <textarea class="form-control" placeholder="Enter Your Message" id="mailBody"></textarea>
+                            <div class="messageAlert alert">Invalid Message</div>
+                            <input type="button" onclick="sendNow()" value="Send Message" id="submit" class="button" disabled>
+                            <!-- <button value="Send Email" onclick="sendEmail()">Send Message</button> -->
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ======================================= Footer =======================================-->
+
+    <section id="footer">
+        <div class="copy">
+            <span>Copyright &copy; 2020 </span><a href="https://almni.netlify.app/pages/about/about" target="_blanck">&nbsp; Nothing Real</a>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/ityped@1.0.2"></script>
     <script src="js/ityped.js"></script>
     <script src="js/home.js"></script>
