--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
     </header>
     <!-- ======================================= Top Rated =======================================-->
     <section id="topRated">
-        <h2>Top Rated</h2>
+        <h2>Recent Posts</h2>
         <div class="container">
             <div class="recent">
-
+                <div id="news" class="news">
+                    <!-- <div id="newstitle"></div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -105,6 +107,19 @@
             <span>Copyright &copy; 2020 </span><a href="https://almni.netlify.app/pages/about/about" target="_blanck">&nbsp; Nothing Real</a>
         </div>
     </section>
+
+
+
+
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+ https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 
     <script src="https://unpkg.com/ityped@1.0.2"></script>
     <script src="js/ityped.js"></script>
