fix some issues in login & profile

--- a/Pages/login/login.html
+++ b/Pages/login/login.html
@@ -12,12 +12,6 @@
     <link rel="stylesheet" href="style.css" />
 
 </head>
-<<<<<<< HEAD
-<body>
-  <div class="row">
-    <div class="col-sm-12">.col-sm-12</div>
-=======
->>>>>>> da3c3948a116d8de4e6d8e45c0ebbfad7421fd16
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark  fixed-top">
@@ -87,10 +81,16 @@
 
 
             </form>
-            <script src="js/login.js"></script>
-            <script src="js/getdata.js"></script>
-            <script>
-            </script>
+        </div>
+
+
+
+
+
+        <script src="js/login.js"></script>
+        <script src="js/getdata.js"></script>
+        <script>
+        </script>
 
 </body>
 
