--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
                         <a class="nav-link lang" key="NEWS" href="Pages/news/news.html">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link lang" key="PROFILE" href="Pages/news/news.html">Profile</a>
+                        <a class="nav-link lang" key="PROFILE" href="Pages/profie/profile.html">Profile</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item lang" key="" href="Pages/login/login.html">Login</a>
-                            <a class="dropdown-item" href="#">Sign Up</a>
-
+                            <a class="dropdown-item" href="Pages/login/register.html">Sign Up</a>
                         </div>
                     </li>
                 </ul>
