--- a/Pages/login/login.html
+++ b/Pages/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Log In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -28,11 +28,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Pages/news/news.html">Link</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="" id="logout">Log Out</a>
+                    </li>
+                    <li class="nav-item dropdown" id="hidelogin">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Action 1</a>
-                            <a class="dropdown-item" href="#">Action 2</a>
+                            <a class="dropdown-item lang" key="" href="login.html">Login</a>
+                            <a class="dropdown-item" href="Pages/login/register.html">Sign Up</a>
                         </div>
                     </li>
                 </ul>
@@ -51,7 +54,7 @@
                     <span>
               <!-- <i style='font-size:24px' class='fas'>&#xf406;</i> -->
         
-        <input type="username"  class="form-control"  placeholder= "type user name" id="username">
+        <input type="username"  class="form-control"  placeholder= "type user name" id="email">
       </span>
                 </div>
                 <div class="form-group">
@@ -75,7 +78,7 @@
             </span>
 
                 <br><br>
-                <button type="button" class="btn btn-success btn-block">login</button>
+                <button type="button" id="login" class="btn btn-success btn-block">login</button>
                 <br>
 
 
@@ -87,8 +90,18 @@
 
 
 
-        <script src="js/login.js"></script>
-        <script src="js/getdata.js"></script>
+        <!-- <script src="js/login.js"></script>
+        <script src="js/getdata.js"></script> -->
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+        <script src="login.js"></script>
         <script>
         </script>
 
