--- a/Pages/login/register.html
+++ b/Pages/login/register.html
@@ -14,28 +14,34 @@
 </head>
 
 <body>
+    <!-- ======================================= Navbar =======================================================-->
+
     <nav class="navbar navbar-expand-sm navbar-dark  fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="../../index.html"><img src="../../assets/imgs/logo-bg.png" alt="logo"></a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link lang" key="HOME" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Pages/news/news.html">Link</a>
+                        <a class="nav-link lang" key="NEWS" href="../news/news.html">News</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="" id="logout">Log Out</a>
+                    <li class="nav-item">
+                        <a class="nav-link lang" key="PROFILE" href="Pages/profie/profile.html">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" key="LOGOUT" href="" id="logout">Log Out</a>
                     </li>
                     <li class="nav-item dropdown" id="hidelogin">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <a class="nav-link dropdown-toggle" key="JOINUS" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item lang" key="" href="login.html">Login</a>
-                            <a class="dropdown-item" href="register.html">Sign Up</a>
+                            <a class="dropdown-item lang" key="LOGIN" href="../login/login.html">Login</a>
+                            <a class="dropdown-item lang" key="SIGNUP" href="../login/register.html">Sign Up</a>
                         </div>
                     </li>
                 </ul>
@@ -46,7 +52,6 @@
             </div>
         </div>
     </nav>
-
 
     <div class="row">
         <div class="col-sm-12">.col-sm-12</div>
@@ -82,6 +87,8 @@
                     <br>
                     <button type="button" id="regbtn" class="btn btn-success btn-block"> Register </button>
                     <br>
+
+                    <label>Already Have Account ? </label> <button type="button" id="reglogbtn" class="btn btn-success btn-block"> Login </button>
 
 
 
