--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- ======================================= Multi lang Buttons =======================================-->
-            <!-- <button class="translate btn btn-info" id="en">English</button> -->
-            <!-- <button class="translate btn btn-info" id="ar">عربي</button> -->
-
-            <!-- ------------------------------------------------------------------------------------------------- -->
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
@@ -41,13 +36,13 @@
                         <a class="nav-link lang" key="PROFILE" href="Pages/profie/profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" id="logout">Log Out</a>
+                        <a class="nav-link lang" key="LOGOUT" href="" id="logout">Log Out</a>
                     </li>
                     <li class="nav-item dropdown" id="hidelogin">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
+                        <a class="nav-link dropdown-toggle" key="JOINUS" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item lang" key="" href="Pages/login/login.html">Login</a>
-                            <a class="dropdown-item" href="Pages/login/register.html">Sign Up</a>
+                            <a class="dropdown-item lang" key="LOGIN" href="Pages/login/login.html">Login</a>
+                            <a class="dropdown-item lang" key="SIGNUP" href="Pages/login/register.html">Sign Up</a>
                         </div>
                     </li>
                 </ul>
@@ -136,7 +131,7 @@
                 </div>
                 <div class="col-4">
                     <div class="copy">
-                        <span>Copyright &copy; 2020 </span><a href="https://almni.netlify.app/pages/about/about" target="_blanck">&nbsp; Nothing Real</a>
+                        <span class="lang" Key="COPYRIGHT">Copyright &copy; 2020 </span><a href="https://nothing-real.netlify.app/" target="_blanck">&nbsp; Nothing Real</a>
                     </div>
                 </div>
                 <div class="col-4">
