improve crud opreation

--- a/Pages/login/register.html
+++ b/Pages/login/register.html
@@ -55,7 +55,7 @@
                 <form>
                     <div class="form-group">
 
-                        <input type="name" class="form-control" placeholder=" Name" id="Name">
+                        <input type="name" class="form-control" placeholder=" Name" id="name">
 
                     </div>
                     <br>
