--- a/Pages/login/register.html
+++ b/Pages/login/register.html
@@ -88,9 +88,9 @@
                     <button type="button" id="regbtn" class="btn btn-success btn-block"> Register </button>
                     <br>
 
-                    <label>Already Have Account ? </label> <button type="button" id="reglogbtn" class="btn btn-success btn-block"> Login </button>
-
-
+                    <label>Already Have Account ? </label>
+                    <!-- <button type="button" id="reglogbtn" class="btn btn-success btn-block"> Login </button> -->
+                    <a href="login.html" style="color: #fff;">login</a>
 
                 </form>
             </div>
