add arabic lang in home page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link lang" key="LOGOUT" href="" id="logout">Log Out</a>
                     </li>
                     <li class="nav-item dropdown" id="hidelogin">
-                        <a class="nav-link dropdown-toggle" key="JOINUS" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
+                        <a class="nav-link dropdown-toggle lang" key="JOINUS" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Join Us</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item lang" key="LOGIN" href="Pages/login/login.html">Login</a>
                             <a class="dropdown-item lang" key="SIGNUP" href="Pages/login/register.html">Sign Up</a>
@@ -57,8 +57,8 @@
     <!-- ======================================= Header =======================================-->
 
     <header>
-        <h1>Nothing Is Real</h1>
-        <h2 id="ityped" class="ityped"></h2>
+        <h1 class="lang" key="NOTHING">Nothing Is Real</h1>
+        <h2 id="ityped" class="ityped lang" key="ROTATE"></h2>
     </header>
 
 
@@ -105,7 +105,7 @@
     <!-- ======================================= Top Rated =======================================-->
 
     <section id="topRated">
-        <h2>Recent Posts</h2>
+        <h2 class="lang" key="RECENT">Recent Posts</h2>
         <div class="container">
             <div class="recent">
                 <div id="news" class="news">
