--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0" key="SEARCH" type="submit">Search</button>
                 </form>
             </div>
         </div>
