moomen adits on login and reg

--- a/Pages/login/login.html
+++ b/Pages/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Log In</title>
+    <title>Login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
                 <br>
             </form>
         </div>
-        <!-- ======================================= Footer =======================================
+        <!-- ======================================= Footer ======================================= -->
         <section id="footer">
             <div class="container">
                 <div class="row">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </div>
-        </section>-->
+        </section>
 
         <!-- <script src="js/login.js"></script>
         <script src="js/getdata.js"></script> -->
