--- a/Pages/login/register.html
+++ b/Pages/login/register.html
@@ -5,6 +5,7 @@
     <title>Register</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -94,13 +95,30 @@
 
                 </form>
             </div>
+            <!-- ======================================= Footer =======================================-->
 
-
-            <!-- <script src="js/login.js" ></script>
-    <script src="js/getdata.js"></script> -->
-            <!-- <script > 
-                
-    </script> -->
+            <section id="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="followUs">
+                                <i class="fab fa-facebook-f "></i>
+                                <i class="fab fa-twitter "></i>
+                                <i class="fab fa-linkedin-in "></i>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="copy">
+                                <span class="lang" Key="COPYRIGHT">Copyright &copy; 2020 </span><a href="https://nothing-real.netlify.app/" target="_blanck">&nbsp; Nothing Real</a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <img src="../news/imgs/iconfinder_United_Kingdom_2361499.png" alt="en" class="translate" id="en">
+                            <img src="../news/imgs/iconfinder_Egypt-Flag_32209.png" alt="egypt" class="translate" id="ar">
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!-- The core Firebase JS SDK is always required and must be listed first -->
             <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
