links edit and add about sec

--- a/Pages/login/login.html
+++ b/Pages/login/login.html
@@ -30,7 +30,7 @@
                         <a class="nav-link lang" key="NEWS" href="../news/news.html">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link lang" key="PROFILE" href="Pages/profie/profile.html">Profile</a>
+                        <a class="nav-link lang" key="PROFILE" href="../profie/profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" key="LOGOUT" href="" id="logout">Log Out</a>
