--- a/index.html
+++ b/index.html
@@ -56,11 +56,20 @@
 
     <!-- ======================================= Header =======================================-->
 
-    <header>
+    <header style="border-radius: 5px;">
         <h1 class="lang" key="NOTHING">Nothing Is Real</h1>
         <h2 id="ityped" class="ityped lang" key="ROTATE"></h2>
     </header>
 
+
+    <!-- ======================================= About us ======================================= -->
+
+    <div id="about" class="card">
+        <h1>About&nbsp;<strong>US</strong></h1>
+        <p>
+            We are a site that cares about wrong news and rumors that could destroy an entire nation, so here we are putting all the wrong news and rumors for a better future.
+        </p>
+    </div>
 
 
     <!-- ======================================= carousel =======================================-->
