--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
     <!-- ======================================= About us ======================================= -->
 
     <div id="about" class="card">
-        <h1>About&nbsp;<strong>US</strong></h1>
-        <p>
+        <h1 key="HABOUT">About Us</h1>
+        <p key="PABOUT">
             We are a site that cares about wrong news and rumors that could destroy an entire nation, so here we are putting all the wrong news and rumors for a better future.
         </p>
     </div>
-
 
     <!-- ======================================= carousel =======================================-->
     <div id="demo" class="carousel slide" data-ride="carousel">
