--- a/Pages/profie/profile.html
+++ b/Pages/profie/profile.html
@@ -61,40 +61,23 @@
 
     <!-- ======================================= profile =======================================-->
 
-    <!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark justify-content-center">
-        <h3 class="text-center">My Profile</h3>
-    </nav> -->
 
     <main id="main-grid">
         <section>
-            <img src="https://1.bp.blogspot.com/-K5dpZSgpiY0/WmSStvrtIXI/AAAAAAABOs8/dJV0sVYAqZ8G1oqn60E24YLMCHSYemmpgCLcBGAs/s400/26c84676ec11d1748fcfee2994b5eb7e--popular-mens-hairstyles-mens-hairstyle-.jpg" class="rounded-circle center img1" style="width: 400px; height: 400px ; ">
-            <section>
+            <div class="img">
                 <img src="https://1.bp.blogspot.com/-K5dpZSgpiY0/WmSStvrtIXI/AAAAAAABOs8/dJV0sVYAqZ8G1oqn60E24YLMCHSYemmpgCLcBGAs/s400/26c84676ec11d1748fcfee2994b5eb7e--popular-mens-hairstyles-mens-hairstyle-.jpg" class="rounded-circle center img1">
-            </section>
+            </div>
             <br>
-
-
-            <section>
+            <div>
                 <h3 class="text-center">Join Scander</h3>
                 <br>
-
-
                 <p>Graduated from cs </p>
                 <p>Giza</p>
                 <p>3/11/1997
                     <p>
                         <p>I like Music,football and tennis</p>
-
-
-
-
-
-
-
-            </section>
-            </aside>
-
-
+            </div>
+        </section>
     </main>
     <br> <br> <br>
 
@@ -128,12 +111,19 @@
             </div>
         </div>
 
-
-
-
     </section>
 
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+    <script src="profile.js"></script>
+    <script src="../news/js/Multilang.js"></script>
 </body>
 
 </html>
