--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- ======================================= About us ======================================= -->
 
     <div id="about" class="card">
-        <h1 key="HABOUT">About Us</h1>
-        <p key="PABOUT">
+        <h1 class="lang" key="HABOUT">About Us</h1>
+        <p class="lang" key="PABOUT">
             We are a site that cares about wrong news and rumors that could destroy an entire nation, so here we are putting all the wrong news and rumors for a better future.
         </p>
     </div>
@@ -117,7 +117,6 @@
         <div class="container">
             <div class="recent">
                 <div id="news" class="news">
-                    <!-- <div id="newstitle"></div> -->
 
                 </div>
             </div>
@@ -176,3 +175,21 @@
 </body>
 
 </html>
+
+
+<!--
+                  _  
+   /\     /\/\   |_| 
+__/--\__ /    \  |  \
+
+-->
+
+<!--
+
+ <*)
+  ||______
+   (______}
+     |  |
+     ^  ^
+
+-->
