--- a/Pages/profie/profile.html
+++ b/Pages/profie/profile.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link lang" key="HOME" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link lang" key="HOME" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link lang" key="NEWS" href="../news/news.html">News</a>
